[package]
name = "pingora"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait="0.1"
pingora = { version = "0.1", features = ["lb"] }
pingora-proxy = "0.1"
pingora-http = "0.1"
pingora-core = "0.1"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.110"
prometheus = "0.13.3"
env_logger = "0.11.2"
log = "0.4.21"
structopt = "0.3.26"
